versioned_docs/version-2.15.0/api-reference/classes/ScalarField.mdx
Defined in: [lib/provable/scalar-field.ts:12](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/scalar-field.ts#L12)

ForeignField representing the scalar field of Pallas and the base field of Vesta

## Extends

- [`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx)\<`this`\>

## Constructors

### Constructor

```ts
new ScalarField(x: 
  | string
  | number
  | bigint
  | Field3
  | ForeignField): ScalarField;
```

Defined in: [lib/provable/foreign-field.ts:123](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L123)

Create a new [ForeignField](../interfaces/ForeignField.mdx) from a bigint, number, string, or another ForeignField.

#### Parameters

##### x

  \| `string`
  \| `number`
  \| `bigint`
  \| `Field3`
  \| [`ForeignField`](../interfaces/ForeignField.mdx)

#### Returns

`ScalarField`

#### Example

```ts
let x = new ForeignField(5);
let y = ForeignField.from(10n);
```

Note: Inputs must be range checked if they originate from a different field with a different modulus or if they are not constants.

- When constructing from another [ForeignField](../interfaces/ForeignField.mdx) instance, ensure the modulus matches. If not, check the modulus using `Gadgets.ForeignField.assertLessThan()` and handle appropriately.
- When constructing from a `Field3` array, ensure all elements are valid Field elements and range checked.
- Ensure constants are correctly reduced to the modulus of the field.

#### Inherited from

```ts
createForeignField(Fq.modulus).constructor
```

## Properties

### type

```ts
type: "Unreduced" | "AlmostReduced" | "FullyReduced" = 'Unreduced';
```

Defined in: [lib/provable/foreign-field.ts:488](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L488)

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`type`](../interfaces/UnreducedForeignField.mdx#type)

***

### value

```ts
value: Field3;
```

Defined in: [lib/provable/foreign-field.ts:40](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L40)

The internal representation of a foreign field element, as a tuple of 3 limbs.

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`value`](../interfaces/UnreducedForeignField.mdx#value)

***

### \_Bigint

```ts
static _Bigint: 
  | {
}
  | undefined = undefined;
```

Defined in: [lib/provable/foreign-field.ts:18](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L18)

#### Inherited from

```ts
createForeignField(Fq.modulus)._Bigint
```

***

### \_modulus

```ts
static _modulus: bigint | undefined = undefined;
```

Defined in: [lib/provable/foreign-field.ts:19](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L19)

#### Inherited from

```ts
createForeignField(Fq.modulus)._modulus
```

***

### \_provable

```ts
static _provable: 
  | ProvablePureExtended<UnreducedForeignField, bigint, string>
  | undefined = undefined;
```

Defined in: [lib/provable/foreign-field.ts:490](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L490)

#### Inherited from

```ts
createForeignField(Fq.modulus)._provable
```

***

### \_variants

```ts
static _variants: 
  | {
  almostReduced: typeof AlmostForeignField;
  canonical: typeof CanonicalForeignField;
  unreduced: typeof UnreducedForeignField;
}
  | undefined = undefined;
```

Defined in: [lib/provable/foreign-field.ts:79](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L79)

Sibling classes that represent different ranges of field elements.

#### Inherited from

```ts
createForeignField(Fq.modulus)._variants
```

## Accessors

### Constructor

#### Get Signature

```ts
get Constructor(): typeof ForeignField;
```

Defined in: [lib/provable/foreign-field.ts:42](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L42)

##### Returns

*typeof* [`ForeignField`](../interfaces/ForeignField.mdx)

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`Constructor`](../interfaces/UnreducedForeignField.mdx#constructor)

***

### modulus

#### Get Signature

```ts
get modulus(): bigint;
```

Defined in: [lib/provable/foreign-field.ts:30](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L30)

##### Returns

`bigint`

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`modulus`](../interfaces/UnreducedForeignField.mdx#modulus)

***

### AlmostReduced

#### Get Signature

```ts
get static AlmostReduced(): typeof AlmostForeignField;
```

Defined in: [lib/provable/foreign-field.ts:97](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L97)

Constructor for field elements that are "almost reduced", i.e. lie in the range [0, 2^ceil(log2(p))).

##### Returns

*typeof* [`AlmostForeignField`](../interfaces/AlmostForeignField.mdx)

#### Inherited from

```ts
createForeignField(Fq.modulus).AlmostReduced
```

***

### Bigint

#### Get Signature

```ts
get static Bigint(): {
};
```

Defined in: [lib/provable/foreign-field.ts:22](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L22)

##### Returns

```ts
{
}
```

#### Inherited from

```ts
createForeignField(Fq.modulus).Bigint
```

***

### Canonical

#### Get Signature

```ts
get static Canonical(): typeof CanonicalForeignField;
```

Defined in: [lib/provable/foreign-field.ts:104](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L104)

Constructor for field elements that are fully reduced, i.e. lie in the range [0, p).

##### Returns

*typeof* [`CanonicalForeignField`](../interfaces/CanonicalForeignField.mdx)

#### Inherited from

```ts
createForeignField(Fq.modulus).Canonical
```

***

### modulus

#### Get Signature

```ts
get static modulus(): bigint;
```

Defined in: [lib/provable/foreign-field.ts:26](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L26)

##### Returns

`bigint`

#### Inherited from

```ts
createForeignField(Fq.modulus).modulus
```

***

### provable

#### Get Signature

```ts
get static provable(): ProvablePureExtended<UnreducedForeignField, bigint, string>;
```

Defined in: [lib/provable/foreign-field.ts:492](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L492)

`Provable<ForeignField>`, see [Provable](../variables/Provable-1.mdx)

##### Returns

[`ProvablePureExtended`](../type-aliases/ProvablePureExtended.mdx)\<[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx), `bigint`, `string`\>

#### Inherited from

```ts
createForeignField(Fq.modulus).provable
```

***

### sizeInBits

#### Get Signature

```ts
get static sizeInBits(): number;
```

Defined in: [lib/provable/foreign-field.ts:33](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L33)

##### Returns

`number`

#### Inherited from

```ts
createForeignField(Fq.modulus).sizeInBits
```

***

### Unreduced

#### Get Signature

```ts
get static Unreduced(): typeof UnreducedForeignField;
```

Defined in: [lib/provable/foreign-field.ts:90](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L90)

Constructor for unreduced field elements.

##### Returns

*typeof* [`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx)

#### Inherited from

```ts
createForeignField(Fq.modulus).Unreduced
```

***

### Unsafe

#### Get Signature

```ts
get static Unsafe(): {
  fromField: CanonicalForeignField;
};
```

Defined in: [lib/provable/foreign-field.ts:49](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L49)

Unsafe constructor methods for advanced usage.

##### Returns

###### fromField()

```ts
fromField(x: Field): CanonicalForeignField;
```

Converts a [Field](Field.mdx) into a [ForeignField](../interfaces/ForeignField.mdx). This is an **unsafe** operation
as the native Field size may be larger than the Foreign Field size, and changes in modulus
can have unintended consequences.

Only use this if you have already constrained the Field element to be within the foreign field modulus.

###### Parameters

###### x

[`Field`](Field.mdx)

a [Field](Field.mdx)

###### Returns

[`CanonicalForeignField`](../interfaces/CanonicalForeignField.mdx)

#### Inherited from

```ts
createForeignField(Fq.modulus).Unsafe
```

## Methods

### add()

```ts
add(y: number | bigint | ForeignField): UnreducedForeignField;
```

Defined in: [lib/provable/foreign-field.ts:243](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L243)

Finite field addition

#### Parameters

##### y

`number` \| `bigint` \| [`ForeignField`](../interfaces/ForeignField.mdx)

#### Returns

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx)

#### Example

```ts
x.add(2); // x + 2 mod p
```

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`add`](../interfaces/UnreducedForeignField.mdx#add)

***

### assertAlmostReduced()

```ts
assertAlmostReduced(): AlmostForeignField;
```

Defined in: [lib/provable/foreign-field.ts:198](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L198)

Assert that this field element lies in the range [0, 2^k),
where k = ceil(log2(p)) and p is the foreign field modulus.

Returns the field element as a [AlmostForeignField](../interfaces/AlmostForeignField.mdx).

For a more efficient version of this for multiple field elements, see [assertAlmostReduced](#assertalmostreduced-1).

Note: this does not ensure that the field elements is in the canonical range [0, p).
To assert that stronger property, there is [assertCanonical](../interfaces/ForeignField.mdx#assertcanonical).
You should typically use [assertAlmostReduced](#assertalmostreduced-1) though, because it is cheaper to prove and sufficient for
ensuring validity of all our non-native field arithmetic methods.

#### Returns

[`AlmostForeignField`](../interfaces/AlmostForeignField.mdx)

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`assertAlmostReduced`](../interfaces/UnreducedForeignField.mdx#assertalmostreduced)

***

### assertCanonical()

```ts
assertCanonical(): CanonicalForeignField;
```

Defined in: [lib/provable/foreign-field.ts:229](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L229)

Assert that this field element is fully reduced,
i.e. lies in the range [0, p), where p is the foreign field modulus.

Returns the field element as a [CanonicalForeignField](../interfaces/CanonicalForeignField.mdx).

#### Returns

[`CanonicalForeignField`](../interfaces/CanonicalForeignField.mdx)

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`assertCanonical`](../interfaces/UnreducedForeignField.mdx#assertcanonical)

***

### assertEquals()

#### Call Signature

```ts
assertEquals(y: 
  | number
  | bigint
  | CanonicalForeignField, message?: string): CanonicalForeignField;
```

Defined in: [lib/provable/foreign-field.ts:321](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L321)

Assert equality with a ForeignField-like value

##### Parameters

###### y

  \| `number`
  \| `bigint`
  \| [`CanonicalForeignField`](../interfaces/CanonicalForeignField.mdx)

###### message?

`string`

##### Returns

[`CanonicalForeignField`](../interfaces/CanonicalForeignField.mdx)

##### Examples

```ts
x.assertEquals(0, "x is zero");
```

Since asserting equality can also serve as a range check,
this method returns `x` with the appropriate type:

```ts
let xChecked = x.assertEquals(1, "x is 1");
xChecked satisfies CanonicalForeignField;
```

##### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`assertEquals`](../interfaces/UnreducedForeignField.mdx#assertequals)

#### Call Signature

```ts
assertEquals(y: AlmostForeignField, message?: string): AlmostForeignField;
```

Defined in: [lib/provable/foreign-field.ts:322](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L322)

Assert equality with a ForeignField-like value

##### Parameters

###### y

[`AlmostForeignField`](../interfaces/AlmostForeignField.mdx)

###### message?

`string`

##### Returns

[`AlmostForeignField`](../interfaces/AlmostForeignField.mdx)

##### Examples

```ts
x.assertEquals(0, "x is zero");
```

Since asserting equality can also serve as a range check,
this method returns `x` with the appropriate type:

```ts
let xChecked = x.assertEquals(1, "x is 1");
xChecked satisfies CanonicalForeignField;
```

##### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`assertEquals`](../interfaces/UnreducedForeignField.mdx#assertequals)

#### Call Signature

```ts
assertEquals(y: ForeignField, message?: string): ForeignField;
```

Defined in: [lib/provable/foreign-field.ts:323](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L323)

Assert equality with a ForeignField-like value

##### Parameters

###### y

[`ForeignField`](../interfaces/ForeignField.mdx)

###### message?

`string`

##### Returns

[`ForeignField`](../interfaces/ForeignField.mdx)

##### Examples

```ts
x.assertEquals(0, "x is zero");
```

Since asserting equality can also serve as a range check,
this method returns `x` with the appropriate type:

```ts
let xChecked = x.assertEquals(1, "x is 1");
xChecked satisfies CanonicalForeignField;
```

##### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`assertEquals`](../interfaces/UnreducedForeignField.mdx#assertequals)

***

### assertLessThan()

```ts
assertLessThan(c: number | bigint, message?: string): void;
```

Defined in: [lib/provable/foreign-field.ts:358](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L358)

Assert that this field element is less than a constant c: `x < c`.

The constant must satisfy `0 <= c < 2^264`, otherwise an error is thrown.

#### Parameters

##### c

`number` \| `bigint`

##### message?

`string`

#### Returns

`void`

#### Example

```ts
x.assertLessThan(10);
```

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`assertLessThan`](../interfaces/UnreducedForeignField.mdx#assertlessthan)

***

### neg()

```ts
neg(): AlmostForeignField;
```

Defined in: [lib/provable/foreign-field.ts:254](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L254)

Finite field negation

#### Returns

[`AlmostForeignField`](../interfaces/AlmostForeignField.mdx)

#### Example

```ts
x.neg(); // -x mod p = p - x
```

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`neg`](../interfaces/UnreducedForeignField.mdx#neg)

***

### sub()

```ts
sub(y: number | bigint | ForeignField): UnreducedForeignField;
```

Defined in: [lib/provable/foreign-field.ts:269](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L269)

Finite field subtraction

#### Parameters

##### y

`number` \| `bigint` \| [`ForeignField`](../interfaces/ForeignField.mdx)

#### Returns

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx)

#### Example

```ts
x.sub(1); // x - 1 mod p
```

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`sub`](../interfaces/UnreducedForeignField.mdx#sub)

***

### toBigInt()

```ts
toBigInt(): bigint;
```

Defined in: [lib/provable/foreign-field.ts:181](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L181)

Convert this field element to a bigint.

#### Returns

`bigint`

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`toBigInt`](../interfaces/UnreducedForeignField.mdx#tobigint)

***

### toBits()

```ts
toBits(length?: number): Bool[];
```

Defined in: [lib/provable/foreign-field.ts:377](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L377)

Unpack a field element to its bits, as a [Bool](Bool.mdx)[] array.

This method is provable!

#### Parameters

##### length?

`number`

#### Returns

[`Bool`](Bool.mdx)[]

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`toBits`](../interfaces/UnreducedForeignField.mdx#tobits)

***

### toFields()

```ts
toFields(): Field[];
```

Defined in: [lib/provable/foreign-field.ts:425](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L425)

Instance version of `Provable<ForeignField>.toFields`, see [Provable.toFields](../type-aliases/Provable-1.mdx#tofields)

#### Returns

[`Field`](Field.mdx)[]

#### Inherited from

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx).[`toFields`](../interfaces/UnreducedForeignField.mdx#tofields)

***

### toScalar()

```ts
toScalar(): Scalar;
```

Defined in: [lib/provable/scalar-field.ts:16](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/scalar-field.ts#L16)

Provable method to convert a ScalarField into a [Scalar](Scalar.mdx)

#### Returns

[`Scalar`](Scalar.mdx)

***

### assertAlmostReduced()

```ts
static assertAlmostReduced<T>(...xs: T): [...{ [i in string | number | symbol]: AlmostForeignField }[]];
```

Defined in: [lib/provable/foreign-field.ts:212](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L212)

Assert that one or more field elements lie in the range [0, 2^k),
where k = ceil(log2(p)) and p is the foreign field modulus.

This is most efficient than when checking a multiple of 3 field elements at once.

#### Type Parameters

##### T

`T` *extends* `Tuple`\<[`ForeignField`](../interfaces/ForeignField.mdx)\>

#### Parameters

##### xs

...`T`

#### Returns

\[...\{ \[i in string \| number \| symbol\]: AlmostForeignField \}\[\]\]

#### Inherited from

```ts
createForeignField(Fq.modulus).assertAlmostReduced
```

***

### check()

```ts
static check(x: ForeignField): void;
```

Defined in: [lib/provable/foreign-field.ts:497](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L497)

#### Parameters

##### x

[`ForeignField`](../interfaces/ForeignField.mdx)

#### Returns

`void`

#### Inherited from

```ts
createForeignField(Fq.modulus).check
```

***

### from()

#### Call Signature

```ts
static from(x: string | number | bigint): CanonicalForeignField;
```

Defined in: [lib/provable/foreign-field.ts:147](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L147)

Coerce the input to a [ForeignField](../interfaces/ForeignField.mdx).

##### Parameters

###### x

`string` \| `number` \| `bigint`

The value to convert. Can be a [ForeignField](../interfaces/ForeignField.mdx), bigint, number, or string.

##### Returns

[`CanonicalForeignField`](../interfaces/CanonicalForeignField.mdx)

##### Inherited from

```ts
createForeignField(Fq.modulus).from
```

#### Call Signature

```ts
static from(x: 
  | string
  | number
  | bigint
  | ForeignField): ForeignField;
```

Defined in: [lib/provable/foreign-field.ts:148](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L148)

Coerce the input to a [ForeignField](../interfaces/ForeignField.mdx).

##### Parameters

###### x

  \| `string`
  \| `number`
  \| `bigint`
  \| [`ForeignField`](../interfaces/ForeignField.mdx)

The value to convert. Can be a [ForeignField](../interfaces/ForeignField.mdx), bigint, number, or string.

##### Returns

[`ForeignField`](../interfaces/ForeignField.mdx)

##### Inherited from

```ts
createForeignField(Fq.modulus).from
```

***

### fromBits()

```ts
static fromBits(bits: Bool[]): AlmostForeignField;
```

Defined in: [lib/provable/foreign-field.ts:407](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L407)

Create a field element from its bits, as a `Bool[]` array.

This method is provable!

#### Parameters

##### bits

[`Bool`](Bool.mdx)[]

#### Returns

[`AlmostForeignField`](../interfaces/AlmostForeignField.mdx)

#### Inherited from

```ts
createForeignField(Fq.modulus).fromBits
```

***

### fromScalar()

```ts
static fromScalar(s: Scalar): ScalarField;
```

Defined in: [lib/provable/scalar-field.ts:32](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/scalar-field.ts#L32)

Converts this [Scalar](Scalar.mdx) into a ScalarField

#### Parameters

##### s

[`Scalar`](Scalar.mdx)

#### Returns

`ScalarField`

***

### random()

```ts
static random(): CanonicalForeignField;
```

Defined in: [lib/provable/foreign-field.ts:418](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L418)

#### Returns

[`CanonicalForeignField`](../interfaces/CanonicalForeignField.mdx)

#### Inherited from

```ts
createForeignField(Fq.modulus).random
```

***

### sum()

```ts
static sum(xs: (number | bigint | ForeignField)[], operations: (-1 | 1)[]): UnreducedForeignField;
```

Defined in: [lib/provable/foreign-field.ts:294](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/foreign-field.ts#L294)

Sum (or difference) of multiple finite field elements.

#### Parameters

##### xs

(`number` \| `bigint` \| [`ForeignField`](../interfaces/ForeignField.mdx))[]

##### operations

(`-1` \| `1`)[]

#### Returns

[`UnreducedForeignField`](../interfaces/UnreducedForeignField.mdx)

#### Example

```ts
let z = ForeignField.sum([3, 2, 1], [-1, 1]); // 3 - 2 + 1
z.assertEquals(2);
```

This method expects a list of ForeignField-like values, `x0,...,xn`,
and a list of "operations" `op1,...,opn` where every op is 1 or -1 (plus or minus),
and returns

`x0 + op1*x1 + ... + opn*xn`

where the sum is computed in finite field arithmetic.

**Important:** For more than two summands, this is significantly more efficient
than chaining calls to [ForeignField.add](../interfaces/ForeignField.mdx#add) and [ForeignField.sub](../interfaces/ForeignField.mdx#sub).

#### Inherited from

```ts
createForeignField(Fq.modulus).sum
```

***

### toScalar()

```ts
static toScalar(field: ForeignField): Scalar;
```

Defined in: [lib/provable/scalar-field.ts:20](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/provable/scalar-field.ts#L20)

#### Parameters

##### field

[`ForeignField`](../interfaces/ForeignField.mdx)

#### Returns

[`Scalar`](Scalar.mdx)
